--- a/system/composer.json
+++ b/system/composer.json
@@ -29,7 +29,8 @@
         "kartik-v/yii2-money": "dev-master",
         "kidzen/yii2-dynamicform": "*",
         "kartik-v/yii2-widget-activeform": "dev-master",
-        "kartik-v/yii2-mpdf": "dev-master"
+        "kartik-v/yii2-mpdf": "dev-master",
+        "phpoffice/phpspreadsheet": "^2.0"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
