--- a/system/composer.json
+++ b/system/composer.json
@@ -30,7 +30,9 @@
         "kidzen/yii2-dynamicform": "*",
         "kartik-v/yii2-widget-activeform": "dev-master",
         "kartik-v/yii2-mpdf": "dev-master",
-        "phpoffice/phpspreadsheet": "^2.0"
+        "phpoffice/phpspreadsheet": "^2.0",
+        "kartik-v/yii2-export": "dev-master",
+        "kartik-v/yii2-bootstrap4-dropdown": "@dev"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
