--- a/system/composer.json
+++ b/system/composer.json
@@ -32,7 +32,8 @@
         "kartik-v/yii2-mpdf": "dev-master",
         "phpoffice/phpspreadsheet": "^2.0",
         "kartik-v/yii2-export": "dev-master",
-        "kartik-v/yii2-bootstrap4-dropdown": "@dev"
+        "kartik-v/yii2-bootstrap4-dropdown": "@dev",
+        "picqer/php-barcode-generator": "^2.4"
     },
     "require-dev": {
         "yiisoft/yii2-debug": "~2.1.0",
